--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.iml
+app/release/*
 .gradle
 /local.properties
 /.idea/caches
@@ -13,3 +13,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+/app/release/app-release.apk
