--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,18 @@
 [versions]
 agp = "8.13.2"
-kotlin = "1.9.0"
-coreKtx = "1.13.1"
+kotlin = "2.3.0"
+coreKtx = "1.17.0"
+jetbrainsCompose = "2.3.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.2"
-activityCompose = "1.9.0"
-composeBom = "2024.04.01"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.10.0"
+activityCompose = "1.12.2"
+composeBom = "2025.12.01"
 materialIconsExtendedAndroid = "1.7.8"
-playServiceBase = "18.5.0"
+playServiceBase = "18.9.0"
 barcodeScanning = "16.1.0"
-okhttp = "4.10.0"
+okhttp = "5.3.2"
 
 [libraries]
 androidx-compose-material-icons-extended-android = { module = "androidx.compose.material:material-icons-extended-android", version.ref = "materialIconsExtendedAndroid" }
@@ -36,4 +37,4 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+jetbrains-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "jetbrainsCompose" }
